<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".DashboarduserActivity">

    <!--Tool bar-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_toolbar02">

        <!--Image button open profile-->
        <ImageButton
            android:id="@+id/prfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_person" />


        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="Dashboard User"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="abc@example.com"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_logout_white" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageBtn"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/weather_app" />


    <EditText
        android:id="@+id/Notes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/imageBtn"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/shape_edittext01"
        android:drawablePadding="10dp"
        android:hint="Please write here..."
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:textColor="@color/Black"
        android:textColorHint="@color/gray01" />

    <Button
        android:id="@+id/SaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Notes"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_button01"
        android:text="Save Note"
        android:textColor="@color/white" />


    <LinearLayout
        android:id="@+id/DispAccdetailsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/SaveBtn"
        android:layout_marginTop="25dp"
        android:textAlignment="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:text="Text will be updated"
                android:textStyle="italic"
                android:id="@+id/tvSavednotes"
                android:textAlignment="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="30dp"

                android:background="@drawable/shape_button02"
                android:layout_below="@id/DisplayBtn"
                />
    </LinearLayout>

</RelativeLayout>