...
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <!--backbutton-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white" />
...
        android:text="abc@example.com"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Black"
        android:textSize="12sp"/>

    <LinearLayout
        android:id="@+id/detailsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/emailTv"
        android:layout_marginTop="10dp">

...
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account"
                android:textColor="@color/Black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Account"
                android:layout_width="match_parent"
...
                android:layout_height="wrap_content"
                android:text="Phone No."
                android:textColor="@color/Black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="18dp"
                android:drawablePadding="10dp"
...
        android:id="@+id/DisplayBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details2Ll"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button01"
        android:text="Display"
        android:textColor="@color/white" />


    <LinearLayout
        android:id="@+id/DispAccdetailsLl"
        android:layout_width="match_parent"
...
